MVC (UI분리) 까지는 구현 완료